# TypeText

./: .gitattributes  .gitignore  Cargo.toml  README.md  quickstart.txt
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build-portable.yml  ci.yml  codeql.yml  defender-smoke-test.yml  release-builds.yml  security-audit.yml
Scripts/: build-linux-deb.sh  build-linux-portable.sh  build-macos-app.sh  build-macos-dmg.sh  build-windows-installer.ps1  build-windows-portable.ps1  generate-icons.swift  generate-release-notes.sh  render-stacked-icon.swift  security-review-policy.ps1  version.ps1  version.sh
apps/typetext-desktop/: Cargo.toml  build.rs
apps/typetext-desktop/macos/: Info.plist
apps/typetext-desktop/src/: main.rs  platform.rs
crates/typetext-core/: Cargo.toml
crates/typetext-core/src/: lib.rs
docs/: linux-notes.md  macos-notes.md  security-review-2026-06-24.md
examples/: settings.json  settings.offline.json  snippets.json  tokens.json
icon/: TypeText.icns
