[workspace]
members = [
  "crates/typetext-core",
  "apps/typetext-desktop"
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"
version = "2.7.0"

[profile.release]
# Strip symbols and drop the debug data directory / PDB path from shipped
# binaries. AV heuristics flag embedded debug-symbol paths, and there is no
# reason to leak local build paths in release artifacts.
strip = "symbols"
debug = false

[patch.crates-io]
# Keep egui-winit's Windows/macOS clipboard backend without pulling Linux Smithay/Wayland into Cargo.lock.
egui-winit = { path = "third_party/egui-winit-0.35.0" }
# wayland-scanner 0.31.10 on crates.io pins vulnerable quick-xml 0.39.
# Pin the upstream security fix until a patched wayland-scanner release is published.
# https://github.com/Smithay/wayland-rs/commit/d07c4f91f28b42e5a485823ffd9d8d5a210b1053
wayland-scanner = { git = "https://github.com/Smithay/wayland-rs", rev = "d07c4f91f28b42e5a485823ffd9d8d5a210b1053" }
