[package]
name = "typetext-desktop"
edition.workspace = true
license.workspace = true
version.workspace = true
build = "build.rs"

[features]
default = ["windows-startup-registry"]
offline-portable = []
windows-startup-registry = ["windows/Win32_System_Registry"]

[dependencies]
anyhow = "1.0.102"
eframe = "0.35.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
typetext-core = { path = "../../crates/typetext-core" }
url = "2.5.8"

[target.'cfg(any(windows, target_os = "macos"))'.dependencies]
tray-icon = { version = "0.24.1", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_WindowsAndMessaging"
] }
