[package]
name = "typetext-desktop"
edition.workspace = true
license.workspace = true
version.workspace = true
build = "build.rs"

[features]
default = ["windows-startup-registry"]
offline-portable = []
windows-startup-registry = ["windows/Win32_System_Registry"]

[dependencies]
anyhow = "1.0.102"
eframe = { version = "0.35.0", default-features = false, features = ["default_fonts", "wgpu_no_default_features"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
typetext-core = { path = "../../crates/typetext-core" }
url = "2.5.8"
wgpu = { version = "29.0.4", default-features = false, features = ["std", "parking_lot", "dx12", "metal", "wgsl"] }

[target.'cfg(any(windows, target_os = "macos"))'.dependencies]
tray-icon = { version = "0.24.1", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_WindowsAndMessaging"
] }
